deploy/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-onyxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres-onyxdb
      app.kubernetes.io/instance: postgres-onyxdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres-onyxdb
        app.kubernetes.io/instance: postgres-onyxdb
    spec:
      containers:
        - name: postgres
          image: 'postgres:17'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /postgres/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-onyxdb
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-onyxdb
  labels:
    app.kubernetes.io/name: postgres-onyxdb
    app.kubernetes.io/instance: postgres-onyxdb
spec:
  ports:
    - port: 5432
  selector:
    app.kubernetes.io/name: postgres-onyxdb
    app.kubernetes.io/instance: postgres-onyxdb
