deploy/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-onyxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis-onyxdb
      app.kubernetes.io/instance: redis-onyxdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis-onyxdb
        app.kubernetes.io/instance: redis-onyxdb
    spec:
      containers:
        - name: postgres
          image: "redis:8.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
          args:
            - "--user $(REDIS_USER) on >$(REDIS_PASSWORD) ~* +@all"
            - "--user default off"
            - "--requirepass $(REDIS_PASSWORD)"
          volumeMounts:
            - mountPath: /redis/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis-onyxdb
---
apiVersion: v1
kind: Service
metadata:
  name: redis-onyxdb
  labels:
    app.kubernetes.io/name: redis-onyxdb
    app.kubernetes.io/instance: redis-onyxdb
spec:
  ports:
    - port: 6379
  selector:
    app.kubernetes.io/name: redis-onyxdb
    app.kubernetes.io/instance: redis-onyxdb
