deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: onyxdb-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: grafana.onyxdb.com.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onyxdb-grafana
                port:
                  number: 3000
    - host: vlogs.onyxdb.com.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onyxdb-vlogs
                port:
                  number: 9428
